Expand DOCX text extraction